# web-scraper-docgen

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  BACKEND_REVIEW_SUMMARY.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  README.md  docker-compose.firecrawl.yml  docker-compose.yml  pyproject.toml  start.bat  start.sh  test.html
frontend/vue-project/: index.html  install-tailwind.sh  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/vue-project/src/: App.vue  style.css
frontend/vue-project/src/router/: index.js
frontend/vue-project/src/services/: api.js
frontend/vue-project/src/views/: CrawlerPage.vue  HomePage.vue  MonitorPage.vue  SchedulerPage.vue  SearchPage.vue  (+2 more)
src/: config.py  main.py
src/adapters/: content_filter.py  document_cache.py  format_adapter.py  rag_store.py  rate_limiter.py  scheduler_manager.py  session_manager.py  topic_manager.py
src/agents/: researcher.py  reviewer.py  scheduler.py  topic_selector.py  writer.py
src/api/: auth.py  crawler.py  monitor.py  rag.py  scheduler.py  scraper.py  search.py  tasks.py  topics.py
src/core/: crew.py  llm.py  utils.py
src/crawler/: __init__.py  batch.py  engine.py  firecrawl_client.py  incremental.py  site_detector.py
src/worker/: __init__.py  dispatcher.py  executor.py  models.py  store.py
tests/: test_config.py  test_content_filter.py  test_core.py  test_document_cache.py  test_format_adapter.py  test_intent.py  test_models.py  test_rag_store.py  test_reply.py  test_scheduler.py  test_scraper_api.py  test_session_manager.py  test_topic_manager.py
